test/parser/basic/oper-05.stderr
At: "oper-05.hac":8:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	list<(root_item)>: (instance-decl) ... [5:1--6:10]
#STATE#	[ [8:1]
#STATE#	(id-expr): N [8:3]
#STATE#	= [8:4]
in state #STATE#, possible rules are:
	guarded_instance_management : expr . RARROW instance_management_list_optional  (#RULE#)
acceptable tokens are: 
	RARROW (shift)
