test/parser/basic/oper-05.hac
// "oper-05.hac"
// copy-modified from "oper-04.hac"
// testing = operator

pint N = 4;
pint K = 4;

[ N=K ->	// '=' for "==" is OK only inside parens
bool b;
]


